<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home">Home</string>
    <string name="jadwal">Schedule</string>
    <string name="training">Training</string>
    <string name="daftar_online">Register</string>
    <string name="info">Information</string>
    <string name="toko_idn">IDN Store</string>
    <string name="contact_us">Contact Us</string>
    <string name="action_settings">Change Language</string>
    <string name="keluar">Logout</string>

</resources>
